--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -175,9 +175,10 @@
                         <property name="column_spacing">3</property>
                         <property name="row_spacing">6</property>
                         <child>
-                          <object class="GtkHScale" id="hscale_red">
+                          <object class="GtkHScale" id="hscale_gamma">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="restrict_to_fill_level">False</property>
                             <property name="fill_level">1</property>
                             <property name="value_pos">right</property>
                           </object>
@@ -190,9 +191,9 @@
                           <object class="GtkHBox" id="hbox7">
                             <property name="visible">True</property>
                             <child>
-                              <object class="GtkLabel" id="label_red">
+                              <object class="GtkLabel" id="label_gamma">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Red:</property>
+                                <property name="label" translatable="yes">Gamma:</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -202,10 +203,12 @@
                           </object>
                         </child>
                         <child>
-                          <object class="GtkHScale" id="hscale_green">
+                          <object class="GtkHScale" id="hscale_brightness">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="restrict_to_fill_level">False</property>
                             <property name="fill_level">1</property>
+                            <property name="digits">0</property>
                             <property name="value_pos">right</property>
                           </object>
                           <packing>
@@ -216,10 +219,12 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkHScale" id="hscale_blue">
+                          <object class="GtkHScale" id="hscale_contrast">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="restrict_to_fill_level">False</property>
                             <property name="fill_level">1</property>
+                            <property name="digits">0</property>
                             <property name="value_pos">right</property>
                           </object>
                           <packing>
@@ -233,9 +238,9 @@
                           <object class="GtkHBox" id="hbox8">
                             <property name="visible">True</property>
                             <child>
-                              <object class="GtkLabel" id="label_green">
+                              <object class="GtkLabel" id="label_brightness">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Green:</property>
+                                <property name="label" translatable="yes">Brightness:</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -252,9 +257,9 @@
                           <object class="GtkHBox" id="hbox9">
                             <property name="visible">True</property>
                             <child>
-                              <object class="GtkLabel" id="label_blue">
+                              <object class="GtkLabel" id="label_contrast">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Blue:</property>
+                                <property name="label" translatable="yes">Contrast:</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -285,6 +290,7 @@
                 <child>
                   <object class="GtkHBox" id="hbox4">
                     <property name="visible">True</property>
+                    <property name="spacing">6</property>
                     <child>
                       <object class="GtkButton" id="button_calibrate">
                         <property name="label" translatable="yes">_Calibrate</property>
@@ -297,6 +303,20 @@
                       <packing>
                         <property name="expand">False</property>
                         <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton" id="button_reset">
+                        <property name="label" translatable="yes">_Reset to defaults</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="use_underline">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">1</property>
                       </packing>
                     </child>
                   </object>
