Remove markup from GTKBuilder translatable strings

--- a/data/gcm-calibrate.ui
+++ b/data/gcm-calibrate.ui
@@ -52,8 +52,11 @@
                     <child>
                       <object class="GtkLabel" id="label_title">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">&lt;big&gt;&lt;b&gt;Title&lt;/b&gt;&lt;/big&gt;</property>
-                        <property name="use_markup">True</property>
+                        <property name="label" translatable="yes">Title</property>
+                        <attributes>
+                          <attribute name="weight" value="bold"/>
+                          <attribute name="scale" value="1.2"/>
+                        </attributes>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -111,8 +114,10 @@
                         <child type="label">
                           <object class="GtkLabel" id="label1">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">&lt;b&gt;Details&lt;/b&gt;</property>
-                            <property name="use_markup">True</property>
+                            <property name="label" translatable="yes">Details</property>
+                            <attributes>
+                              <attribute name="weight" value="bold"/>
+                            </attributes>
                           </object>
                         </child>
                       </object>
