--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -49,8 +49,10 @@
                     <child>
                       <object class="GtkLabel" id="label_profile">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">&lt;b&gt;Color Profile:&lt;/b&gt;</property>
-                        <property name="use_markup">True</property>
+                        <property name="label" translatable="yes">Color Profile:</property>
+                        <attributes>
+                          <attribute name="weight" value="bold"/>
+                        </attributes>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -277,8 +279,10 @@
                     <child type="label">
                       <object class="GtkLabel" id="label1">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">&lt;b&gt;Fine tuning:&lt;/b&gt;</property>
-                        <property name="use_markup">True</property>
+                        <property name="label" translatable="yes">Fine tuning:</property>
+                        <attributes>
+                          <attribute name="weight" value="bold"/>
+                        </attributes>
                       </object>
                     </child>
                   </object>
