--- a/data/gcm-calibrate.ui
+++ b/data/gcm-calibrate.ui
@@ -4,11 +4,11 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkDialog" id="dialog_calibrate">
     <property name="border_width">5</property>
-    <property name="title" translatable="yes">Calibration</property>
+    <property name="title"> </property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
-    <property name="type_hint">normal</property>
+    <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox1">
@@ -55,7 +55,7 @@
                         <property name="label" translatable="yes">Title</property>
                         <attributes>
                           <attribute name="weight" value="bold"/>
-                          <attribute name="scale" value="1.2"/>
+                          <attribute name="scale" value="1.200000"/>
                         </attributes>
                       </object>
                       <packing>
