--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -17,6 +17,7 @@
           <object class="GtkHBox" id="hbox1">
             <property name="visible">True</property>
             <property name="spacing">9</property>
+            <property name="homogeneous">True</property>
             <child>
               <object class="GtkScrolledWindow" id="scrolledwindow1">
                 <property name="visible">True</property>
@@ -33,8 +34,6 @@
                 </child>
               </object>
               <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
                 <property name="position">0</property>
               </packing>
             </child>
