--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -354,6 +354,7 @@
                         </child>
                       </object>
                       <packing>
+                        <property name="expand">False</property>
                         <property name="position">3</property>
                       </packing>
                     </child>
