Add the ability to delete saved devices

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -363,6 +363,20 @@
                         <property name="visible">True</property>
                         <property name="spacing">6</property>
                         <child>
+                          <object class="GtkButton" id="button_delete">
+                            <property name="label" translatable="yes">_Delete</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="use_underline">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">False</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
                           <object class="GtkButton" id="button_calibrate">
                             <property name="label" translatable="yes">_Calibrate</property>
                             <property name="visible">True</property>
@@ -372,7 +386,7 @@
                           </object>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="position">0</property>
+                            <property name="position">1</property>
                           </packing>
                         </child>
                         <child>
@@ -386,7 +400,7 @@
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
-                            <property name="position">1</property>
+                            <property name="position">2</property>
                           </packing>
                         </child>
                       </object>
