Add some more translator comments

--- a/data/gcm-calibrate.ui
+++ b/data/gcm-calibrate.ui
@@ -52,7 +52,7 @@
                     <child>
                       <object class="GtkLabel" id="label_title">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Title</property>
+                        <property name="label">Title</property>
                         <attributes>
                           <attribute name="weight" value="bold"/>
                           <attribute name="scale" value="1.200000"/>
@@ -82,7 +82,7 @@
                         <child>
                           <object class="GtkLabel" id="label_message">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">Message</property>
+                            <property name="label">Message</property>
                             <property name="wrap">True</property>
                           </object>
                           <packing>
@@ -114,7 +114,7 @@
                         <child type="label">
                           <object class="GtkLabel" id="label1">
                             <property name="visible">True</property>
-                            <property name="label" translatable="yes">Details</property>
+                            <property name="label" translatable="yes" comments="Expander label, for use when the user wants to see the VTE widget and what the calibration tool is actually doing">Details</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
