trivial: remove some input flicker when showing the prefs dialog

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -199,7 +199,7 @@
                                             <child>
                                               <object class="GtkLabel" id="label_title_serial">
                                                 <property name="visible">True</property>
-                                                <property name="label" translatable="yes" comments="The serial number of the device">Serial:</property>
+                                                <property name="label" translatable="yes" comments="The serial number of the device">Serial number:</property>
                                               </object>
                                               <packing>
                                                 <property name="expand">False</property>
@@ -217,7 +217,7 @@
                                             <child>
                                               <object class="GtkLabel" id="label_serial">
                                                 <property name="visible">True</property>
-                                                <property name="label">serial:</property>
+                                                <property name="label">serial</property>
                                               </object>
                                               <packing>
                                                 <property name="expand">False</property>
